// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c3 {
  box-sizing: border-box;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  padding: 16px;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c3:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c3:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c3[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c3[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c3:valid {
  border-color: #28C081;
}

.was-validated .c3:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c3:invalid {
  border-color: #DC2C10;
}

.was-validated .c3:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2"
    font-size="1"
    font-weight="3"
  >
    Input label
  </div>
  <input
    class="c3"
    color="text"
    font-size="1rem"
    height="3rem"
  />
</label>
`;

exports[`Field component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c3 {
  box-sizing: border-box;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  padding: 16px;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c3:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c3:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c3[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c3[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c3:valid {
  border-color: #28C081;
}

.was-validated .c3:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c3:invalid {
  border-color: #DC2C10;
}

.was-validated .c3:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2"
    font-size="1"
    font-weight="3"
  >
    Themed input label
  </div>
  <input
    class="c3"
    color="text"
    font-size="1rem"
    height="3rem"
  />
</label>
`;

exports[`Field component sanity supports array of children 1`] = `
.c0 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  color: #4E3FCE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c7 {
  box-sizing: border-box;
}

.c2 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
}

.c8 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1;
}

.c6 {
  position: relative;
  display: inline-block;
}

.c6 > input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: relative;
  z-index: 1;
  display: block;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c6 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c6 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c6 > input:checked ~ svg[name='checked'] {
  display: block;
}

.c4 {
  cursor: pointer;
}

.c4:hover input:not(:disabled) ~ svg[name='unchecked'] {
  fill: currentColor;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  >
    Multiple options
  </div>
  <label
    class="c3 c4"
    color="primary"
    display="flex"
    opacity="1"
    required=""
  >
    <div
      class="c5 c6"
    >
      <input
        color="primary"
        required=""
        theme="[object Object]"
        type="radio"
        value="1"
      />
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="unchecked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      class="c7 c8"
      color="text"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      One
    </div>
  </label>
  <label
    class="c3 c4"
    color="primary"
    display="flex"
    opacity="1"
    required=""
  >
    <div
      class="c5 c6"
    >
      <input
        color="primary"
        required=""
        theme="[object Object]"
        type="radio"
        value="2"
      />
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="unchecked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      class="c7 c8"
      color="text"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Two
    </div>
  </label>
  <label
    class="c3 c4"
    color="primary"
    display="flex"
    opacity="1"
    required=""
  >
    <div
      class="c5 c6"
    >
      <input
        color="primary"
        required=""
        theme="[object Object]"
        type="radio"
        value="3"
      />
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="unchecked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      class="c7 c8"
      color="text"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Three
    </div>
  </label>
</label>
`;
